# modular-calc-jfy

./: .gitignore  LICENSE  README.md  modules.yaml  pyproject.toml  shell.nix
.github/workflows/: pylint.yml  unittest.yml
docs/: .testszenarien.md.swp  Klassendiagramm-analyt.xmi  Klassendiagramm.xmi  Testszenarien.docx  Testszenarien.ott  meilensteinberatung.md  testszenarien.md
modular_calc_jfy/: __main__.py  aux_calc.ui  aux_window.py  backup.py  calculator.py  credit_module.ui  geometry_module.ui  info_module.ui  percentage_module.ui  rpn.py  school_module.ui  window.py  window.ui
modular_calc_jfy/modules/: geometrie.py  geometry.py  info.py  kredit.py  math.py  percentage.py  school.py
modular_calc_jfy/styles/: console.qss  dark_grey.qss  fancy.qss
styles/: dark_gnome.qss  dark_grey.qss  fancy.qss  light.qss
tests/: test_calculator.py  test_geometry.py  test_info.py  test_percentage.py  test_school.py
