[tool.poetry]
name = "modular_calc_jfy"
version = "0.1.0"
description = ""
authors = ["Jan Meineke <jan.meineke@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
PyQt6 = "^6.7.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jfy = "modular_calc_jfy.__main__:main"

[tool.poetry-pyinstaller-plugin.include]
"modular_calc_jfy/*" = "."
"styles" = "."

[tool.poetry-pyinstaller-plugin.scripts]
modular_calc_jfy = { source = "modular_calc_jfy/__main__.py", type = "onefile", windowed = true }
